# bankbolt

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: gen_license.py  make_installer.ps1
src/bank_normalizer/: __init__.py  api.py  cli.py  models.py
src/bank_normalizer/config/: __init__.py  banks.py  banks.yaml  categories.yaml  lenders.py  lenders.yaml
src/bank_normalizer/data/samples/: README.txt
src/bank_normalizer/desktop/: app.py
src/bank_normalizer/export/: __init__.py  csv_writer.py  summary.py  xlsx_writer.py
src/bank_normalizer/export/lender_profiles/: __init__.py  lender_bar.py  lender_foo.py
src/bank_normalizer/extract/: __init__.py  ocr_fallback.py  parse_table.py  pdf_reader.py
src/bank_normalizer/normalize/: __init__.py  categorizer.py  recurring.py  rules_engine.py
src/bank_normalizer/normalize/banks/: __init__.py  anz.py  base.py  cba.py  nab.py  wbc.py
src/bank_normalizer/service/: __init__.py  licensing.py  web.py  workers.py
src/dateparser/: __init__.py
src/fastapi/: __init__.py  responses.py  staticfiles.py  templating.py  testclient.py
src/pydantic/: __init__.py
src/streamlit/: __init__.py
src/yaml/: __init__.py
tests/: test_bank_profiles.py  test_exports.py  test_normalize_core.py  test_recurring.py  test_service_api.py  utils_pdf.py
web/static/: htmx-lite.js  styles.css
web/templates/: base.html  index.html  result.html
