[build-system]
requires = []
build-backend = "setuptools.build_meta"

[project]
name = "bank-normalizer"
version = "0.1.0"
description = "PDF bank statements to clean CSV/XLSX exports with lender profiles"
readme = "README.md"
authors = [{name = "BankBolt", email = "dev@example.com"}]
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
ocr = ["pytesseract>=0.3"]
fastjson = ["orjson>=3.9"]
stripe = ["stripe>=5.0"]

[project.scripts]
banknorm = "bank_normalizer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
select = ["E", "F", "B", "I", "UP", "N", "S", "W", "C90"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
strict = false
mypy_path = "src"

[tool.coverage.run]
source = ["bank_normalizer"]
branch = true
